--- a/index.html
+++ b/index.html
@@ -24,50 +24,49 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 			  <ul class="nav navbar-nav">
 				<li class="dropdown">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sesion 1<span class="caret"></span></a>
+				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Unidad 1<span class="caret"></span></a>
 				  <ul class="dropdown-menu" role="menu">
 					<li><a href="#" id="p1_11" onclick="cargaPractica('html/p1/ejercicio_1-1.html');return false;">Ejercicio 1.1</a></li>
 					<li><a href="#" id="p1_12" onclick="cargaPractica('html/p1/ejercicio_1-2.html');return false;">Ejercicio 1.2</a></li>
 					<li><a href="#" id="p1_13" onclick="cargaPractica('html/p1/ejercicio_1-3.html');return false;">Ejercicio 1.3</a></li>
+					<li><a href="#" id="p1_14" onclick="cargaPractica('html/p1/ejercicio_1-4.html');return false;">Ejercicio 1.4</a></li>
+					<li><a href="#" id="p1_15" onclick="cargaPractica('html/p1/ejercicio_1-5.html');return false;">Ejercicio 1.5</a></li>
 				  </ul>
 				</li>
 				<li class="dropdown">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sesion 2<span class="caret"></span></a>
+				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Unidad 2<span class="caret"></span></a>
 				  <ul class="dropdown-menu" role="menu">
-					<li><a href="#" id="p2_11" onclick="cargaPractica('html/p2/ejercicio_1-1.html');return false;">Ejercicio 1.1</a></li>
-					<li><a href="#" id="p2_12" onclick="cargaPractica('html/p2/ejercicio_1-2.html');return false;">Ejercicio 1.2</a></li>
-					<li><a href="#" id="p2_13" onclick="cargaPractica('html/p2/ejercicio_1-3.html');return false;">Ejercicio 1.3</a></li>
-					<li class="divider"></li>
-					<li><a href="#" id="p2_2" onclick="cargaPractica('html/p2/ejercicio_2.html');return false;">Ejercicio 2</a></li>
-					<li class="divider"></li>
-					<li><a href="#" id="p2_3" onclick="cargaPractica('html/p2/ejercicio_3.html');return false;">Ejercicio 3</a></li>
-					<li class="divider"></li>
-					<li><a href="#" id="p2_41" onclick="cargaPractica('html/p2/ejercicio_4-1.html');return false;">Ejercicio 4.1</a></li>
-					<li><a href="#" id="p2_42" onclick="cargaPractica('html/p2/ejercicio_4-2.html');return false;">Ejercicio 4.2</a></li>
-					<li><a href="#" id="p2_43" onclick="cargaPractica('html/p2/ejercicio_4-3.html');return false;">Ejercicio 4.3</a></li>
+					<li><a href="#" id="p2_11" onclick="cargaPractica('html/p2/ejercicio_1-1.html');return false;">Ejercicio 2.1</a></li>
+					<li><a href="#" id="p2_12" onclick="cargaPractica('html/p2/ejercicio_1-2.html');return false;">Ejercicio 2.2</a></li>
+					<li><a href="#" id="p2_13" onclick="cargaPractica('html/p2/ejercicio_1-3.html');return false;">Ejercicio 2.3</a></li>
+					<li><a href="#" id="p2_14" onclick="cargaPractica('html/p2/ejercicio_1-4.html');return false;">Ejercicio 2.4</a></li>
+					<li><a href="#" id="p2_15" onclick="cargaPractica('html/p2/ejercicio_1-5.html');return false;">Ejercicio 2.5</a></li>
+					<li><a href="#" id="p2_16" onclick="cargaPractica('html/p2/ejercicio_1-6.html');return false;">Ejercicio 2.6</a></li>
+					<li><a href="#" id="p2_17" onclick="cargaPractica('html/p2/ejercicio_1-7.html');return false;">Ejercicio 2.7</a></li>
+					<li><a href="#" id="p2_18" onclick="cargaPractica('html/p2/ejercicio_1-8.html');return false;">Ejercicio 2.8</a></li>
 				  </ul>
 				</li>
 				<li class="dropdown">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sesion 3<span class="caret"></span></a>
+				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Unidad 3<span class="caret"></span></a>
 				  <ul class="dropdown-menu" role="menu">
-					<li><a href="#" id="p3_11" onclick="cargaPractica('html/p3/ejercicio_3-1.html');return false;">Ejercicio 1.1</a></li>
-					<li><a href="#" id="p3_12" onclick="cargaPractica('html/p3/ejercicio_3-2.html');return false;">Ejercicio 1.2</a></li>
-					<li><a href="#" id="p3_13" onclick="cargaPractica('html/p3/ejercicio_3-3.html');return false;">Ejercicio 1.3</a></li>
-					<li><a href="#" id="p3_14" onclick="cargaPractica('html/p3/ejercicio_3-4.html');return false;">Ejercicio 1.4</a></li>
-					<li><a href="#" id="p3_15" onclick="cargaPractica('html/p3/ejercicio_3-5.html');return false;">Ejercicio 1.5</a></li>
+					<li><a href="#" id="p3_11" onclick="cargaPractica('html/p3/ejercicio_3-1.html');return false;">Ejercicio 3.1</a></li>
+					<li><a href="#" id="p3_12" onclick="cargaPractica('html/p3/ejercicio_3-2.html');return false;">Ejercicio 3.2</a></li>
 				  </ul>
 				</li>
 				<li class="dropdown">
 				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ejercicios<span class="caret"></span></a>
 				  <ul class="dropdown-menu" role="menu">
-					<li><a href="#" id="p1_1" onclick="cargaPractica('html/t/ejercicio_1-1.html');return false;">Parcial I - Tarea 1</a></li>
-					<li><a href="#" id="p1_2" onclick="cargaPractica('html/t/ejercicio_1-2.html');return false;">Parcial I - Tarea 2</a></li>
-					<li><a href="#" id="p1_3" onclick="cargaPractica('html/t/ejercicio_1-3.html');return false;">Parcial I - Tarea 3</a></li>
+					<li><a href="#" id="p1_1" onclick="cargaPractica('html/t/ejercicio_1-1.html');return false;">Parcial I - Examen 1</a></li>
 					<li class="divider"></li>
-					<li><a href="#" id="p2_1" onclick="cargaPractica('html/t/ejercicio_2-1.html');return false;">Parcial II - Tarea 1</a></li>
+					<li><a href="#" id="p2_1" onclick="cargaPractica('html/t/ejercicio_2-1.html');return false;">Parcial II - Examen 1</a></li>
 					<li class="divider"></li>
-					<li><a href="#" id="p3_1" onclick="cargaPractica('html/t/ejercicio_3-1.html');return false;">Parcial III - Tarea 1</a></li>
-					<li><a href="#" id="p3_2" onclick="cargaPractica('html/t/ejercicio_3-2.html');return false;">Parcial III - Tarea 2</a></li>
+					<li><a href="#" id="p3_1" onclick="cargaPractica('html/t/ejercicio_3-1.html');return false;">Parcial III - Examen 1</a></li>
+				  </ul>
+				</li>
+				<li class="dropdown">
+				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Proyecto<span class="caret"></span></a>
+				  <ul class="dropdown-menu" role="menu">
+					<li><a href="#" id="proy_1" onclick="cargaPractica('proyecto/menu.html');return false;">Proyecto</a></li>
 				  </ul>
 				</li>
 			  </ul>
