--- a/index.html
+++ b/index.html
@@ -1,95 +1,209 @@
+<!--
+    Descripcion: Portafolio
+-->
 <!DOCTYPE html>
-<html lang="es">
-	<head>
-	  <title>Programación Web I</title>
-	  <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="stylesheet" href="estilo/bootstrap.min.css">
-	  <link rel="stylesheet" href="estilo/sitio.css">
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	</head>
-	<body>
-		<script src="script/funciones.js"></script>
-		<nav class="navbar navbar-default">
-		  <div class="container-fluid">
-			<div class="navbar-header">
-			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>                        
-			  </button>
-			  <a class="navbar-brand" href="#">UPSLP</a>
-			</div>
-			<div class="collapse navbar-collapse" id="myNavbar">
-			  <ul class="nav navbar-nav">
-				<li class="dropdown">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Unidad 1<span class="caret"></span></a>
-				  <ul class="dropdown-menu" role="menu">
-					<li><a href="#" id="p1_11" onclick="cargaPractica('html/p1/ejercicio_1-1.html');return false;">Ejercicio 1.1</a></li>
-					<li><a href="#" id="p1_12" onclick="cargaPractica('html/p1/ejercicio_1-2.html');return false;">Ejercicio 1.2</a></li>
-					<li><a href="#" id="p1_13" onclick="cargaPractica('html/p1/ejercicio_1-3.html');return false;">Ejercicio 1.3</a></li>
-					<li><a href="#" id="p1_14" onclick="cargaPractica('html/p1/ejercicio_1-4.html');return false;">Ejercicio 1.4</a></li>
-					<li><a href="#" id="p1_15" onclick="cargaPractica('html/p1/ejercicio_1-5.html');return false;">Ejercicio 1.5</a></li>
-				  </ul>
-				</li>
-				<li class="dropdown">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Unidad 2<span class="caret"></span></a>
-				  <ul class="dropdown-menu" role="menu">
-					<li><a href="#" id="p2_11" onclick="cargaPractica('html/p2/ejercicio_1-1.html');return false;">Ejercicio 2.1</a></li>
-					<li><a href="#" id="p2_12" onclick="cargaPractica('html/p2/ejercicio_1-2.html');return false;">Ejercicio 2.2</a></li>
-					<li><a href="#" id="p2_13" onclick="cargaPractica('html/p2/ejercicio_1-3.html');return false;">Ejercicio 2.3</a></li>
-					<li><a href="#" id="p2_14" onclick="cargaPractica('html/p2/ejercicio_1-4.html');return false;">Ejercicio 2.4</a></li>
-					<li><a href="#" id="p2_15" onclick="cargaPractica('html/p2/ejercicio_1-5.html');return false;">Ejercicio 2.5</a></li>
-					<li><a href="#" id="p2_16" onclick="cargaPractica('html/p2/ejercicio_1-6.html');return false;">Ejercicio 2.6</a></li>
-					<li><a href="#" id="p2_17" onclick="cargaPractica('html/p2/ejercicio_1-7.html');return false;">Ejercicio 2.7</a></li>
-					<li><a href="#" id="p2_18" onclick="cargaPractica('html/p2/ejercicio_1-8.html');return false;">Ejercicio 2.8</a></li>
-				  </ul>
-				</li>
-				<li class="dropdown">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Unidad 3<span class="caret"></span></a>
-				  <ul class="dropdown-menu" role="menu">
-					<li><a href="#" id="p3_11" onclick="cargaPractica('html/p3/ejercicio_3-1.html');return false;">Ejercicio 3.1</a></li>
-					<li><a href="#" id="p3_12" onclick="cargaPractica('html/p3/ejercicio_3-2.html');return false;">Ejercicio 3.2</a></li>
-				  </ul>
-				</li>
-				<li class="dropdown">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ejercicios<span class="caret"></span></a>
-				  <ul class="dropdown-menu" role="menu">
-					<li><a href="#" id="p1_1" onclick="cargaPractica('html/t/ejercicio_1-1.html');return false;">Parcial I - Examen 1</a></li>
-					<li class="divider"></li>
-					<li><a href="#" id="p2_1" onclick="cargaPractica('html/t/ejercicio_2-1.html');return false;">Parcial II - Examen 2</a></li>
-					<li class="divider"></li>
-					<li><a href="#" id="p3_1" onclick="cargaPractica('html/t/ejercicio_3-1.html');return false;">Parcial III - Examen 3</a></li>
-				  </ul>
-				</li>
-				<li class="dropdown">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Proyecto<span class="caret"></span></a>
-				  <ul class="dropdown-menu" role="menu">
-					<li><a href="#" id="proy_1" onclick="cargaPractica('proyecto/menu.html');return false;">Proyecto</a></li>
-				  </ul>
-				</li>
-			  </ul>
-			  <ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Ene-Jun '22</a></li>
-			  </ul>
-			</div>
-		  </div>
-		</nav>
-		<div class="container-fluid text-center">    
-		  <div class="row content">
-			<div class="col-sm-2 sidenav">
-			</div>
-			<div class="col-sm-8 text-left" id="content" style="height: 800px"> 
-				<!-- Contenido -->
-			</div>
-			<div class="col-sm-2 sidenav">
-			</div>
-		  </div>
-		</div>
-		<footer class="container-fluid text-center">
-		  <p>0177111 - Ruben Cardenas Sanchez</p>
-		  <p>Ingeniería en Tecnologias de la Informacion</p>
-		</footer>
-	</body>
+<html>
+    <!-- Etiqueta de encabezado -->
+    <head>
+        <!-- Etiqueta de titulo -->
+        <title>UPSLP - Programaci&oacute;n Web I</title>
+    </head>
+    <!-- Etiqueta de cuerpo/contenido-->
+    <body>
+        <!-- Etiqueta de titulo/encabezado de una seccion -->
+        <h1>&#10097;&#10097;&#10097; Portafolio de Programación Web &#10096;&#10096;&#10096;</h1>
+        <h2>&#10097;&#10097;&#10097; 0177111 Rubén Cárdenas Sánchez &#10096;&#10096;&#10096;</h2>
+        <h3>&raquo;&raquo;&raquo; Unidad 1 &laquo;&laquo;&laquo;</h3>
+        <ol>
+            <li>
+                <details>
+                    <summary>Actividad No. 01</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad1/u1a1.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Estructura básica de HTML5</code></li>
+                        <li>Etiquetas: <code><var>html</var>, <var>head</var>, <var>title</var>, <var>body</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 02</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad1/u1a2.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Títulos, Párrafos, Entidades, Listas</code></li>
+                        <li>Etiquetas: <code><var>h1</var>, <var>h2</var>, <var>h3</var>, <var>h4</var>, <var>h5</var>, <var>h6</var>, <var>p</var>, <var>br</var>, <var>ol</var>, <var>ul</var>, <var>li</var>, <var>details</var>, <var>summary</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 03</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad1/u1a3.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Ejercicio con listas e imágenes</code></li>
+                        <li>Etiquetas: <code><var>details</var>, <var>summary</var>, <var>ol</var>, <var>li</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 04</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad1/u1a4.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Enlaces y Contenido</code></li>
+                        <li>Etiquetas: <code><var>a</var>, <var>address</var>, <var>small</var>, <var>cite</var>, <var>blockquote</var>, <var>mark</var>, <var>sub</var>, <var>sup</var>, <var>var</var>, <var>kbd</var>, <var>code</var>, <var>samp</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 05</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad1/u1a5.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Ejercicio con enlaces</code></li>
+                        <li>Etiquetas: <code><var>a</var>, <var>details</var>, <var>summary</var>, <var>ul</var>, <var>li</var>, <var>img</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 06</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad1/u1a6.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Imágenes y mapa con imagen</code></li>
+                        <li>Etiquetas: <code><var>img</var>, <var>map</var>, <var>area</var></code></li>
+                    </ul>
+                </details>
+            </li>
+        </ol>
+        <h3>&raquo;&raquo;&raquo; Unidad 2 &laquo;&laquo;&laquo;</h3>
+        <ol>
+            <li>
+                <details>
+                    <summary>Actividad No. 01</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad2/u2a1.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Examen práctico de la Unidad 1</code></li>
+                        <li>Etiquetas: <code><var>ol</var>, <var>li</var>, <var>sup</var>, <var>details</var>, <var>summary</var>, <var>ul</var>, <var>code</var>, <var>img</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 02</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad2/u2a2.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Tablas</code></li>
+                        <li>Etiquetas: <code><var>table</var>, <var>tr</var>, <var>td</var>, <var>th</var>, <var>thead</var>, <var>tbody</var>, <var>tfoot</var>, <var>colspan</var>, <var>rowspan</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 03</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad2/u2a3.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Formularios</code></li>
+                        <li>Etiquetas: <code><var>form</var>, <var>fieldset</var>, <var>label</var>, <var>input</var>, <var>button</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 04</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad2/u2a4.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Estilo</code></li>
+                        <li>Etiquetas: <code><var>style</var>, <var>color</var>, <var>backgroud-color</var>, <var>text-align</var>, <var>text-decoration</var>, <var>columns</var></code></li>
+                    </ul>
+                </details>
+            </li>
+        </ol>
+        <h3>&raquo;&raquo;&raquo; Unidad 3 &laquo;&laquo;&laquo;</h3>
+        <ol>
+            <li>
+                <details>
+                    <summary>Actividad No. 01</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad3/u3a1.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Examen práctico de la Unidad 3</code></li>
+                        <li>Etiquetas: <code><var>table</var>, <var>style</var>, <var>sub</var>, <var>sup</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 02</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad3/u3a2.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Tablas</code></li>
+                        <li>Etiquetas: <code><var>style</var>, <var>animation</var>, <var>transition</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 03</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad3/u3a3.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Introducción a JavaScript</code></li>
+                        <li>Etiquetas: <code><var>script</var>, <var>console</var>, <var>document</var>, <var>alert</var>, <var>confirm</var>, <var>prompt</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 04</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad3/u3a4.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>JavaScript con Formularios</code></li>
+                        <li>Etiquetas: <code><var>script</var>, <var>document</var>, <var>alert</var>, <var>confirm</var>, <var>prompt</var>, <var>form</var></code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Actividad No. 05</summary>
+                    <ul>
+                    	<li>Enlace: <a href="unidad3/u3a5.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Ejercicios JavaScript</code></li>
+                        <li>Etiquetas: <code><var>script</var></code></li>
+                    </ul>
+                </details>
+            </li>
+        </ol>
+        <h3>&raquo;&raquo;&raquo; Proyecto &laquo;&laquo;&laquo;</h3>
+        <ol>
+            <li>
+                <details>
+                    <summary>Proyecto</summary>
+                    <ul>
+                    	<li>Enlace: <a href="proyecto/index.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Proyecto</code></li>
+                    </ul>
+                </details>
+            </li>
+        </ol>
+        <h3>&raquo;&raquo;&raquo; Ejemplos &laquo;&laquo;&laquo;</h3>
+        <ol>
+            <li>
+                <details>
+                    <summary>Tabla Periodica 1</summary>
+                    <ul>
+                    	<li>Enlace: <a href="ejemplos/tablaPeriodica1.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Tabla periodica con estilo CSS</code></li>
+                    </ul>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>Tabla Periodica 2</summary>
+                    <ul>
+                    	<li>Enlace: <a href="ejemplos/tablaPeriodica2.html" target="_blank">&#9763;</a></li>
+                        <li>Descripción: <code>Tabla periodica con estilo CSS</code></li>
+                    </ul>
+                </details>
+            </li>
+        </ol>
+    </body>
 </html>
